--- a/03-Netflix-FM/index.html
+++ b/03-Netflix-FM/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prectica - NETFLIX</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
 </head>
 <body>
     
+    <header>
+        <div class="contenedor">
+            <h2 class="logo">Peliculas-Dev</h2>
+            <nav>
+                <a href="#" class="active">Inicio</a>
+                <a href="#">Populares</a>
+                <a href="#">Películas</a>
+                <a href="#">Series</a>
+                <a href="#">Favoritos</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="pelicula-principal">
+            <div class="contenedor">
+                <h3 class="titulo">Tron: El Legado</h3>
+                <p class="descripcion">
+                    Cuando Sam Flynn, programador experto en tecnología de 27 años e hijo de Kevin Flynn, investiga la desaparición de su padre, se encuentra de repente inmerso en un peligroso y salvaje mundo surreal donde existen feroces luchas a muerte, un lugar paralelo donde su padre ha estado viviendo durante 25 años. Con la ayuda de una joven, padre e hijo se embarcarán en un viaje a vida o muerte a través de un universo cibernético, que con el tiempo se ha convertido en mucho más avanzado y peligroso... Secuela del clásico de culto de 1982.
+                </p>
+                <button role="button" class="boton">
+                    <i class="fas fa-play-circle"></i>
+                    Reproducir
+                </button>
+                <button role="button" class="boton">
+                    <i class="fas fa-info-circle"></i>
+                    Más infromación
+                </button>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
