Netflix-FM: Diseño carousel terminado

--- a/03-Netflix-FM/index.html
+++ b/03-Netflix-FM/index.html
@@ -39,6 +39,71 @@
                 </button>
             </div>
         </div>
+        <div class="peliculas-recomendadas">
+            <div class="contenedor">
+
+                <div class="contenedor-titulo-ctrls">
+                    <h3>Peliculas Recomendadas</h3>
+                    <div class="indicadores">
+                        <button role="button" class="active"></button>
+                        <button role="button"></button>
+                        <button role="button"></button>
+                        <button role="button"></button>
+                        <button role="button"></button>
+                    </div>
+                </div>
+
+                <div class="contenedor-peliculas">
+                    <button role="button" class="flecha-izquierda" id="flecha-izquierda">
+                        <i class="fas fa-angle-left"></i>
+                    </button>
+
+                    <div class="contenedor-carousel">
+                        <div class="carousel">
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/01.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/02.jpg" alt="Juegos de Guerra 2">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/03.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/04.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/05.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/06.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/07.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button role="button" class="flecha-derecha" id="flecha-derecha">
+                        <i class="fas fa-angle-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
