Netflix-FM: Carousel terminado

--- a/03-Netflix-FM/index.html
+++ b/03-Netflix-FM/index.html
@@ -45,11 +45,6 @@
                 <div class="contenedor-titulo-ctrls">
                     <h3>Peliculas Recomendadas</h3>
                     <div class="indicadores">
-                        <button role="button" class="active"></button>
-                        <button role="button"></button>
-                        <button role="button"></button>
-                        <button role="button"></button>
-                        <button role="button"></button>
                     </div>
                 </div>
 
@@ -95,6 +90,96 @@
                                     <img src="./img/07.jpg" alt="Piratas de Silicon Valey">
                                 </a>
                             </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/08.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/09.jpg" alt="Juegos de Guerra 2">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/10.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/11.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/12.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/13.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/14.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/15.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/16.jpg" alt="Juegos de Guerra 2">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/17.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/18.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/19.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/20.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/21.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/22.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/23.jpg" alt="Juegos de Guerra 2">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/24.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
+                            <div class="pelicula">
+                                <a href="#">
+                                    <img src="./img/25.jpg" alt="Piratas de Silicon Valey">
+                                </a>
+                            </div>
                         </div>
                     </div>
 
@@ -107,5 +192,6 @@
     </main>
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <script src="./js/carousel.js"></script>
 </body>
 </html>
