01-Portafolio: Header terminado

--- a/01-Portafolio/index.html
+++ b/01-Portafolio/index.html
@@ -14,26 +14,28 @@
 
     <header>
         <div class="contenedor">
-            <h1 class="titulo">
-                <i class="fas fa-user-astronaut"></i>
-                Space Web
-            </h1>
-            <nav class="menu">
-                <a href="#">Incio</a>
-                <a href="#">Portafolio</a>
-                <a href="#">Blog</a>
-                <a href="#">Abaut</a>
-            </nav>
+            <div class="barra-navegacion">
+                <h1 class="titulo">
+                    <i class="fas fa-user-astronaut"></i>
+                    Space Web
+                </h1>
+                <nav class="menu">
+                    <a href="#">Incio</a>
+                    <a href="#">Portafolio</a>
+                    <a href="#">Blog</a>
+                    <a href="#">About</a>
+                </nav>
+            </div>
             <div class="contenedor-texto">
                 <div class="texto">
                     <h2 class="nombre">Tonatiuj Sánchez</h2>
-                    <h3>Desarrollador web</h3>
+                    <h3 class="cargo">Desarrollador web</h3>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        
+
     </main>
 
 
