01-Portafolio: Acerca de y Trabajos terminados

--- a/01-Portafolio/index.html
+++ b/01-Portafolio/index.html
@@ -20,7 +20,7 @@
                     Space Web
                 </h1>
                 <nav class="menu">
-                    <a href="#">Incio</a>
+                    <a href="#" class="active">Incio</a>
                     <a href="#">Portafolio</a>
                     <a href="#">Blog</a>
                     <a href="#">About</a>
@@ -35,7 +35,68 @@
         </div>
     </header>
     <main>
-
+        <section class="acerca-de">
+            <div class="contenedor">
+                <div class="foto">
+                    <img src="./img/Ton-wall.jpg" alt="Tonatiuj Sanchez">
+                </div>
+                <div class="texto">
+                    <h3 class="titulo"> Acerca de </h3>
+                    <p>Hola! <span class="bold">Soy Tonatiuj</span>, un apacionado del diseño y un profesional del <span class="bold">desarrollo web</span>.
+                    Me especializo en la cracion de <span class="bold">sitios web</span> modernos que permite a las empresas
+                    interactuar con sus clientes y darles una experiancia muy grata.</p>
+                    <p>Mi objetivo es ofracer a <span class="bold">las empresas</span> una presencia digital profecional que les permita
+                    incrementar el alcance de potenciales clientes.</p>
+                </div>
+            </div>
+        </section>
+        <section class="trabajos">
+            <div class="contenedor">
+                <h3 class="titulo"> Trabajos </h3>
+                <div class="contenedor-trabajos">
+                    <div class="trabajo">
+                        <img src="./img/trabajos/01.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/02.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/03.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/04.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/05.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/06.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/07.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                    <div class="trabajo">
+                        <img src="./img/trabajos/08.jpg" alt="Lorem, ipsum.">
+                        <h4>Lorem, ipsum.</h4>
+                        <p>Angular - Firebase - Bootstrap</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
