01-Portafolio: Habilidades agragadas

--- a/01-Portafolio/index.html
+++ b/01-Portafolio/index.html
@@ -50,6 +50,62 @@
                 </div>
             </div>
         </section>
+        <section class="habilidades">
+            <div class="contenedor">
+                <h3 class="titulo">Habilidades</h3>
+                <div class="contenedor-habilidades">
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-html5"></i>
+                        </div>
+                        <p class="nombre">HTML5</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-css3-alt"></i>
+                        </div>
+                        <p class="nombre">CSS3</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-js-square"></i>
+                        </div>
+                        <p class="nombre">Javascript</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-github"></i>
+                        </div>
+                        <p class="nombre">Git & Github</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-angular"></i>
+                        </div>
+                        <p class="nombre">Angular</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-node"></i>
+                        </div>
+                        <p class="nombre">NodeJS</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fab fa-php"></i>
+                        </div>
+                        <p class="nombre">PHP</p>
+                    </div>
+                    <div class="habilidad">
+                        <div class="icono">
+                            <i class="fas fa-database"></i>
+                        </div>
+                        <p class="nombre">SQL</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <section class="trabajos">
             <div class="contenedor">
                 <h3 class="titulo"> Trabajos </h3>
