--- a/04-Portafolio02/index.html
+++ b/04-Portafolio02/index.html
@@ -2,12 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <title>Tonatiuj Sánchez</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos.css">
+
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 </head>
 <body>
 
@@ -120,11 +123,163 @@
                     </div>
                 </div>
           </section>
+          <section class="trabajos nueva-seccion">
+              <div class="container">
+                <h3 class="titulo-seccion">
+                    Trabajos
+                </h3>
+                <div class="contenedor-trabajos">
+                  <div class="owl-carousel owl-theme">
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-01.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-02.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-03.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-04.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-05.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-06.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-07.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-08.jpg" alt="Proyectos de desarrollo web"> </div>
+                      <div class="trabajo"> <img src="./img/trabajos/trabajo-09.jpg" alt="Proyectos de desarrollo web"> </div>
+                    </div>
+                </div>
+              </div>
+          </section>
+          <section class="ventajas nueva-seccion">
+              <div class="container">
+                  <h3 class="titulo-seccion">
+                      ¿Por que trabajar conmigo?
+                  </h3>
+                  <div class="contenedor-ventajas">
+                      <div class="ventaja">
+                          <div class="icono">
+                            <i class="fas fa-cogs"></i>
+                          </div>
+                          <h4>Calidad</h4>
+                          <p class="desc">
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet minima porro magnam ut? Quis dignissimos sed nam distinctio explicabo!
+                          </p>
+                      </div>
+                      <div class="ventaja">
+                          <div class="icono">
+                            <i class="fas fa-user-tie"></i>
+                          </div>
+                          <h4>Experiencia</h4>
+                          <p class="desc">
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet minima porro magnam ut? Quis dignissimos sed nam distinctio explicabo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, eveniet?
+                          </p>
+                      </div>
+                      <div class="ventaja">
+                          <div class="icono">
+                            <i class="fas fa-headset"></i>
+                          </div>
+                          <h4>Soporte</h4>
+                          <p class="desc">
+                              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet minima porro magnam ut? Quis dignissimos sed nam distinctio explicabo! Lorem ipsum dolor sit amet.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </section>
+          <section class="blog nueva-seccion">
+            <div class="container">
+                <h3 class="titulo-seccion">
+                    Blog
+                </h3>
+                <div class="contenedor-articulos">
+                    <div class="articulo">
+                        <div class="foto">
+                            <img src="./img/blog/blog-01.jpg" alt="">
+                        </div>
+                        <div class="articulo-desc">
+                            <h4>Consejos para mejorar en Diseño Web</h4>
+                            <p class="desc">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt saepe numquam qui debitis pariatur quidem quis atque laborum quam! Quos, expedita!
+                            </p>
+                            <button role="button" class="boton-primario">Leer más <i class="fas fa-long-arrow-alt-right"></i></button>
+                        </div>
+                    </div>
+                    <div class="articulo">
+                        <div class="foto">
+                            <img src="./img/blog/blog-02.jpg" alt="">
+                        </div>
+                        <div class="articulo-desc">
+                            <h4>¿Que es UI y UX?</h4>
+                            <p class="desc">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt saepe numquam qui debitis pariatur quidem quis atque laborum quam! Quos, expedita!
+                            </p>
+                            <button role="button" class="boton-primario">Leer más <i class="fas fa-long-arrow-alt-right"></i></button>
+                        </div>
+                    </div>
+                    <div class="articulo">
+                        <div class="foto">
+                            <img src="./img/blog/blog-03.jpg" alt="">
+                        </div>
+                        <div class="articulo-desc">
+                            <h4>Tips para escribir código limpio</h4>
+                            <p class="desc">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt saepe numquam qui debitis pariatur quidem quis atque laborum quam! Quos, expedita! Lorem, ipsum dolor. Lorem ipsum dolor sit amet.
+                            </p>
+                            <button role="button" class="boton-primario">Leer más <i class="fas fa-long-arrow-alt-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+          <section class="contacto nueva-seccion">
+            <div class="container">
+                <h3 class="titulo-seccion">¿Qué esperas para lanzar tu proyecto?</h3>
+                <form action="" class="formulario">
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                    <input type="email" name="correo" id="correo" placeholder="Correo" required>
+                    <textarea name="mensaje" id="mensaje" placeholder="Mensaje" required></textarea>
+                    <input type="submit" class="boton-primario" value="Contactame">
+                </form>
+            </div>
+          </section>
+          <div class="whatsapp">
+              <a href="#">
+                  <!-- <i class="fab fa-whatsapp"></i> -->
+                  <img src="./img/iconos/WhatsApp.png" alt="Icono de Whatsapp">
+                  <p>WhatsApp</p>
+              </a>
+          </div>
       </main>
+      <footer>
+            <div class="container">
+                <div class="social-media">
+                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="github"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright © <span>2021</span> Todos los derechos reservados</p>
+            </div>
+      </footer>
 
 
+    <script src="https://kit.fontawesome.com/cb62322cc8.js" crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
 
-
-      <script src="https://kit.fontawesome.com/cb62322cc8.js" crossorigin="anonymous"></script>
+    <script>
+        $('.owl-carousel').owlCarousel({
+            loop:false,
+            margin:10,
+            nav:false,
+            responsive:{
+                0:{
+                    items:1
+                },
+                600:{
+                    items:2
+                },
+                1000:{
+                    items:3
+                }
+            }
+        })
+    </script>
 </body>
 </html>
