--- a/10-Festival-Musica/index.html
+++ b/10-Festival-Musica/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="contenedor contenido-header">
-            <h1>Rock & MX Festival</h1>
+            <h1>Rock & EDM Festival</h1>
 
             <nav class="navegacion-principal">
                 <a href="#lineup">Line Up</a>
